[gd_scene load_steps=2 format=3 uid="uid://c8j6y8q33xvnqx"]

[ext_resource type="Script" uid="uid://bf06vt1ox27f0" path="res://scripts/tools/config_editor.gd" id="1_yjnkw"]

[node name="ConfigEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yjnkw")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "配置编辑器"

[node name="Spacer" type="Control" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ReloadButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "重新加载"

[node name="SaveButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "保存"

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ConfigList" type="ItemList" parent="VBoxContainer/HSplitContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="VSplitContainer" type="VSplitContainer" parent="VBoxContainer/HSplitContainer"]
layout_mode = 2

[node name="ConfigTree" type="Tree" parent="VBoxContainer/HSplitContainer/VSplitContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 2
column_titles_visible = true

[node name="PropertyEditor" type="VBoxContainer" parent="VBoxContainer/HSplitContainer/VSplitContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "准备就绪"
